Update readme setup